# fin_int

./: .env  Cargo.toml  README.md  misl.txt
src/: main.rs
src/data_access/: create_table.rs  delete_data.rs  mod.rs  read_data.rs  update_data.rs
src/static/: index.html
src/static/java_script/: app.js
